--- a/notebooks/lib_examples.ipynb
+++ b/notebooks/lib_examples.ipynb
@@ -11,143 +11,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Required imports\n",
-    "from ngraph.lib.graph import MultiDiGraph\n",
-    "from ngraph.lib.max_flow import calc_max_flow\n",
-    "\n",
-    "# Create a graph with parallel edges\n",
-    "# Metric:\n",
-    "#      [1,1]      [1,1]\n",
-    "#   ┌────────►B─────────┐\n",
-    "#   │                   │\n",
-    "#   │                   ▼\n",
-    "#   A                   C\n",
-    "#   │                   ▲\n",
-    "#   │   [2]        [2]  │\n",
-    "#   └────────►D─────────┘\n",
-    "#\n",
-    "# Capacity:\n",
-    "#      [1,2]      [1,2]\n",
-    "#   ┌────────►B─────────┐\n",
-    "#   │                   │\n",
-    "#   │                   ▼\n",
-    "#   A                   C\n",
-    "#   │                   ▲\n",
-    "#   │   [3]        [3]  │\n",
-    "#   └────────►D─────────┘\n",
-    "\n",
-    "g = MultiDiGraph()\n",
-    "g.add_edge(\"A\", \"B\", metric=1, capacity=1)\n",
-    "g.add_edge(\"B\", \"C\", metric=1, capacity=1)\n",
-    "g.add_edge(\"A\", \"B\", metric=1, capacity=2)\n",
-    "g.add_edge(\"B\", \"C\", metric=1, capacity=2)\n",
-    "g.add_edge(\"A\", \"D\", metric=2, capacity=3)\n",
-    "g.add_edge(\"D\", \"C\", metric=2, capacity=3)\n",
-    "\n",
-    "# Calculate MaxFlow between the source and destination nodes\n",
-    "max_flow = calc_max_flow(g, \"A\", \"C\")\n",
-    "\n",
-    "# We can verify that the result is as expected\n",
-    "assert max_flow == 6.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Required imports\n",
-    "from ngraph.lib.graph import MultiDiGraph\n",
-    "from ngraph.lib.max_flow import calc_max_flow\n",
-    "\n",
-    "# Create a graph with parallel edges\n",
-    "# Metric:\n",
-    "#      [1,1]      [1,1]\n",
-    "#   ┌────────►B─────────┐\n",
-    "#   │                   │\n",
-    "#   │                   ▼\n",
-    "#   A                   C\n",
-    "#   │                   ▲\n",
-    "#   │   [2]        [2]  │\n",
-    "#   └────────►D─────────┘\n",
-    "#\n",
-    "# Capacity:\n",
-    "#      [1,2]      [1,2]\n",
-    "#   ┌────────►B─────────┐\n",
-    "#   │                   │\n",
-    "#   │                   ▼\n",
-    "#   A                   C\n",
-    "#   │                   ▲\n",
-    "#   │   [3]        [3]  │\n",
-    "#   └────────►D─────────┘\n",
-    "g = MultiDiGraph()\n",
-    "g.add_edge(\"A\", \"B\", metric=1, capacity=1)\n",
-    "g.add_edge(\"B\", \"C\", metric=1, capacity=1)\n",
-    "g.add_edge(\"A\", \"B\", metric=1, capacity=2)\n",
-    "g.add_edge(\"B\", \"C\", metric=1, capacity=2)\n",
-    "g.add_edge(\"A\", \"D\", metric=2, capacity=3)\n",
-    "g.add_edge(\"D\", \"C\", metric=2, capacity=3)\n",
-    "\n",
-    "# Calculate MaxFlow between the source and destination nodes\n",
-    "# Flows will be placed only on the shortest paths\n",
-    "max_flow = calc_max_flow(g, \"A\", \"C\", shortest_path=True)\n",
-    "\n",
-    "# We can verify that the result is as expected\n",
-    "assert max_flow == 3.0"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Required imports\n",
-    "from ngraph.lib.graph import MultiDiGraph\n",
-    "from ngraph.lib.max_flow import calc_max_flow\n",
-    "from ngraph.lib.common import FlowPlacement\n",
+    "\"\"\"\n",
+    "Tests max flow calculations on a graph with parallel edges.\n",
     "\n",
-    "# Create a graph with parallel edges\n",
-    "# Metric:\n",
-    "#      [1,1]      [1,1]\n",
-    "#   ┌────────►B─────────┐\n",
-    "#   │                   │\n",
-    "#   │                   ▼\n",
-    "#   A                   C\n",
-    "#   │                   ▲\n",
-    "#   │   [2]        [2]  │\n",
-    "#   └────────►D─────────┘\n",
-    "#\n",
-    "# Capacity:\n",
-    "#      [1,2]      [1,2]\n",
-    "#   ┌────────►B─────────┐\n",
-    "#   │                   │\n",
-    "#   │                   ▼\n",
-    "#   A                   C\n",
-    "#   │                   ▲\n",
-    "#   │   [3]        [3]  │\n",
-    "#   └────────►D─────────┘\n",
-    "g = MultiDiGraph()\n",
-    "g.add_edge(\"A\", \"B\", metric=1, capacity=1)\n",
-    "g.add_edge(\"B\", \"C\", metric=1, capacity=1)\n",
-    "g.add_edge(\"A\", \"B\", metric=1, capacity=2)\n",
-    "g.add_edge(\"B\", \"C\", metric=1, capacity=2)\n",
-    "g.add_edge(\"A\", \"D\", metric=2, capacity=3)\n",
-    "g.add_edge(\"D\", \"C\", metric=2, capacity=3)\n",
+    "Graph topology (metrics/capacities):\n",
     "\n",
-    "# Calculate MaxFlow between the source and destination nodes\n",
-    "# Flows will be equally balanced across the shortest paths\n",
-    "max_flow = calc_max_flow(\n",
+    "            [1,1] & [1,2]     [1,1] & [1,2]\n",
+    "    A ──────────────────► B ─────────────► C\n",
+    "    │                                      ▲\n",
+    "    │    [2,3]                             │ [2,3]\n",
+    "    └───────────────────► D ───────────────┘\n",
+    "\n",
+    "Edges:\n",
+    "- A→B: two parallel edges with (metric=1, capacity=1) and (metric=1, capacity=2)\n",
+    "- B→C: two parallel edges with (metric=1, capacity=1) and (metric=1, capacity=2)\n",
+    "- A→D: (metric=2, capacity=3)\n",
+    "- D→C: (metric=2, capacity=3)\n",
+    "\n",
+    "The test computes:\n",
+    "- The true maximum flow (expected flow: 6.0)\n",
+    "- The flow along the shortest paths (expected flow: 3.0)\n",
+    "- Flow placement using an equal-balanced strategy on the shortest paths (expected flow: 2.0)\n",
+    "\"\"\"\n",
+    "\n",
+    "from ngraph.lib.graph import StrictMultiDiGraph\n",
+    "from ngraph.lib.algorithms.max_flow import calc_max_flow\n",
+    "from ngraph.lib.algorithms.base import FlowPlacement\n",
+    "\n",
+    "g = StrictMultiDiGraph()\n",
+    "for node in (\"A\", \"B\", \"C\", \"D\"):\n",
+    "    g.add_node(node)\n",
+    "\n",
+    "# Create parallel edges between A→B and B→C\n",
+    "g.add_edge(\"A\", \"B\", key=0, metric=1, capacity=1)\n",
+    "g.add_edge(\"A\", \"B\", key=1, metric=1, capacity=2)\n",
+    "g.add_edge(\"B\", \"C\", key=2, metric=1, capacity=1)\n",
+    "g.add_edge(\"B\", \"C\", key=3, metric=1, capacity=2)\n",
+    "# Create an alternative path A→D→C\n",
+    "g.add_edge(\"A\", \"D\", key=4, metric=2, capacity=3)\n",
+    "g.add_edge(\"D\", \"C\", key=5, metric=2, capacity=3)\n",
+    "\n",
+    "# 1. The true maximum flow\n",
+    "max_flow_prop = calc_max_flow(g, \"A\", \"C\")\n",
+    "assert max_flow_prop == 6.0, f\"Expected 6.0, got {max_flow_prop}\"\n",
+    "\n",
+    "# 2. The flow along the shortest paths\n",
+    "max_flow_sp = calc_max_flow(g, \"A\", \"C\", shortest_path=True)\n",
+    "assert max_flow_sp == 3.0, f\"Expected 3.0, got {max_flow_sp}\"\n",
+    "\n",
+    "# 3. Flow placement using an equal-balanced strategy on the shortest paths\n",
+    "max_flow_eq = calc_max_flow(\n",
     "    g, \"A\", \"C\", shortest_path=True, flow_placement=FlowPlacement.EQUAL_BALANCED\n",
     ")\n",
-    "\n",
-    "# We can verify that the result is as expected\n",
-    "assert max_flow == 2.0"
+    "assert max_flow_eq == 2.0, f\"Expected 2.0, got {max_flow_eq}\""
    ]
   },
   {
@@ -156,154 +76,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Required imports\n",
-    "from ngraph.lib.graph import MultiDiGraph\n",
-    "from ngraph.lib.common import init_flow_graph\n",
-    "from ngraph.lib.demand import FlowPolicyConfig, Demand, get_flow_policy\n",
-    "from ngraph.lib.flow import FlowIndex\n",
+    "\"\"\"\n",
+    "Demonstrates traffic engineering by placing two bidirectional demands on a network.\n",
     "\n",
-    "# Create a graph\n",
-    "# Metric:\n",
-    "#     [1]        [1]\n",
-    "#   ┌──────►B◄──────┐\n",
-    "#   │               │\n",
-    "#   │               │\n",
-    "#   │               │\n",
-    "#   ▼      [1]      ▼\n",
-    "#   A◄─────────────►C\n",
-    "#\n",
-    "# Capacity:\n",
-    "#     [15]      [15]\n",
-    "#   ┌──────►B◄──────┐\n",
-    "#   │               │\n",
-    "#   │               │\n",
-    "#   │               │\n",
-    "#   ▼      [5]      ▼\n",
-    "#   A◄─────────────►C\n",
-    "g = MultiDiGraph()\n",
-    "g.add_edge(\"A\", \"B\", metric=1, capacity=15, label=\"1\")\n",
-    "g.add_edge(\"B\", \"A\", metric=1, capacity=15, label=\"1\")\n",
-    "g.add_edge(\"B\", \"C\", metric=1, capacity=15, label=\"2\")\n",
-    "g.add_edge(\"C\", \"B\", metric=1, capacity=15, label=\"2\")\n",
-    "g.add_edge(\"A\", \"C\", metric=1, capacity=5, label=\"3\")\n",
-    "g.add_edge(\"C\", \"A\", metric=1, capacity=5, label=\"3\")\n",
+    "Graph topology (metrics/capacities):\n",
     "\n",
-    "# Initialize a flow graph\n",
-    "r = init_flow_graph(g)\n",
+    "            [15]\n",
+    "        A ─────── B\n",
+    "        \\      /\n",
+    "    [5] \\    / [15]\n",
+    "            \\  /\n",
+    "            C\n",
     "\n",
-    "# Create traffic demands\n",
-    "demands = [\n",
-    "    Demand(\n",
-    "        \"A\",\n",
-    "        \"C\",\n",
-    "        20,\n",
-    "    ),\n",
-    "    Demand(\n",
-    "        \"C\",\n",
-    "        \"A\",\n",
-    "        20,\n",
-    "    ),\n",
-    "]\n",
+    "- Each link is bidirectional:\n",
+    "        A↔B: capacity 15, B↔C: capacity 15, and A↔C: capacity 5.\n",
+    "- We place a demand of volume 20 from A→C and a second demand of volume 20 from C→A.\n",
+    "- Each demand uses its own FlowPolicy, so the policy's global flow accounting does not overlap.\n",
+    "- The test verifies that each demand is fully placed at 20 units.\n",
+    "\"\"\"\n",
     "\n",
-    "# Place traffic demands onto the flow graph\n",
-    "for demand in demands:\n",
-    "    # Create a flow policy with required parameters or\n",
-    "    # use one of the predefined policies from FlowPolicyConfig\n",
-    "    flow_policy = get_flow_policy(FlowPolicyConfig.TE_UCMP_UNLIM)\n",
+    "from ngraph.lib.graph import StrictMultiDiGraph\n",
+    "from ngraph.lib.algorithms.flow_init import init_flow_graph\n",
+    "from ngraph.lib.flow_policy import FlowPolicyConfig, get_flow_policy\n",
+    "from ngraph.lib.demand import Demand\n",
     "\n",
-    "    # Place demand using the flow policy\n",
-    "    demand.place(r, flow_policy)\n",
+    "# Build the graph.\n",
+    "g = StrictMultiDiGraph()\n",
+    "for node in (\"A\", \"B\", \"C\"):\n",
+    "    g.add_node(node)\n",
     "\n",
-    "# We can verify that all demands were placed as expected\n",
-    "for demand in demands:\n",
-    "    assert demand.placed_demand == 20\n",
+    "# Create bidirectional edges with distinct labels (for clarity).\n",
+    "g.add_edge(\"A\", \"B\", key=0, metric=1, capacity=15, label=\"1\")\n",
+    "g.add_edge(\"B\", \"A\", key=1, metric=1, capacity=15, label=\"1\")\n",
+    "g.add_edge(\"B\", \"C\", key=2, metric=1, capacity=15, label=\"2\")\n",
+    "g.add_edge(\"C\", \"B\", key=3, metric=1, capacity=15, label=\"2\")\n",
+    "g.add_edge(\"A\", \"C\", key=4, metric=1, capacity=5, label=\"3\")\n",
+    "g.add_edge(\"C\", \"A\", key=5, metric=1, capacity=5, label=\"3\")\n",
     "\n",
-    "assert r.get_edges() == {\n",
-    "    0: (\n",
-    "        \"A\",\n",
-    "        \"B\",\n",
-    "        0,\n",
-    "        {\n",
-    "            \"capacity\": 15,\n",
-    "            \"flow\": 15.0,\n",
-    "            \"flows\": {\n",
-    "                FlowIndex(src_node=\"A\", dst_node=\"C\", flow_class=0, flow_id=1): 15.0\n",
-    "            },\n",
-    "            \"label\": \"1\",\n",
-    "            \"metric\": 1,\n",
-    "        },\n",
-    "    ),\n",
-    "    1: (\n",
-    "        \"B\",\n",
-    "        \"A\",\n",
-    "        1,\n",
-    "        {\n",
-    "            \"capacity\": 15,\n",
-    "            \"flow\": 15.0,\n",
-    "            \"flows\": {\n",
-    "                FlowIndex(src_node=\"C\", dst_node=\"A\", flow_class=0, flow_id=1): 15.0\n",
-    "            },\n",
-    "            \"label\": \"1\",\n",
-    "            \"metric\": 1,\n",
-    "        },\n",
-    "    ),\n",
-    "    2: (\n",
-    "        \"B\",\n",
-    "        \"C\",\n",
-    "        2,\n",
-    "        {\n",
-    "            \"capacity\": 15,\n",
-    "            \"flow\": 15.0,\n",
-    "            \"flows\": {\n",
-    "                FlowIndex(src_node=\"A\", dst_node=\"C\", flow_class=0, flow_id=1): 15.0\n",
-    "            },\n",
-    "            \"label\": \"2\",\n",
-    "            \"metric\": 1,\n",
-    "        },\n",
-    "    ),\n",
-    "    3: (\n",
-    "        \"C\",\n",
-    "        \"B\",\n",
-    "        3,\n",
-    "        {\n",
-    "            \"capacity\": 15,\n",
-    "            \"flow\": 15.0,\n",
-    "            \"flows\": {\n",
-    "                FlowIndex(src_node=\"C\", dst_node=\"A\", flow_class=0, flow_id=1): 15.0\n",
-    "            },\n",
-    "            \"label\": \"2\",\n",
-    "            \"metric\": 1,\n",
-    "        },\n",
-    "    ),\n",
-    "    4: (\n",
-    "        \"A\",\n",
-    "        \"C\",\n",
-    "        4,\n",
-    "        {\n",
-    "            \"capacity\": 5,\n",
-    "            \"flow\": 5.0,\n",
-    "            \"flows\": {\n",
-    "                FlowIndex(src_node=\"A\", dst_node=\"C\", flow_class=0, flow_id=0): 5.0\n",
-    "            },\n",
-    "            \"label\": \"3\",\n",
-    "            \"metric\": 1,\n",
-    "        },\n",
-    "    ),\n",
-    "    5: (\n",
-    "        \"C\",\n",
-    "        \"A\",\n",
-    "        5,\n",
-    "        {\n",
-    "            \"capacity\": 5,\n",
-    "            \"flow\": 5.0,\n",
-    "            \"flows\": {\n",
-    "                FlowIndex(src_node=\"C\", dst_node=\"A\", flow_class=0, flow_id=0): 5.0\n",
-    "            },\n",
-    "            \"label\": \"3\",\n",
-    "            \"metric\": 1,\n",
-    "        },\n",
-    "    ),\n",
-    "}"
+    "# Initialize flow-related structures (e.g., to track placed flows in the graph).\n",
+    "flow_graph = init_flow_graph(g)\n",
+    "\n",
+    "# Demand from A→C (volume 20).\n",
+    "demand_ac = Demand(\"A\", \"C\", 20)\n",
+    "flow_policy_ac = get_flow_policy(FlowPolicyConfig.TE_UCMP_UNLIM)\n",
+    "demand_ac.place(flow_graph, flow_policy_ac)\n",
+    "assert demand_ac.placed_demand == 20, (\n",
+    "    f\"Demand from {demand_ac.src_node} to {demand_ac.dst_node} \"\n",
+    "    f\"expected to be fully placed.\"\n",
+    ")\n",
+    "\n",
+    "# Demand from C→A (volume 20), using a separate FlowPolicy instance.\n",
+    "demand_ca = Demand(\"C\", \"A\", 20)\n",
+    "flow_policy_ca = get_flow_policy(FlowPolicyConfig.TE_UCMP_UNLIM)\n",
+    "demand_ca.place(flow_graph, flow_policy_ca)\n",
+    "assert demand_ca.placed_demand == 20, (\n",
+    "    f\"Demand from {demand_ca.src_node} to {demand_ca.dst_node} \"\n",
+    "    f\"expected to be fully placed.\"\n",
+    ")"
    ]
   }
  ],
