updating readme and notebook examples

--- a/notebooks/lib_examples.ipynb
+++ b/notebooks/lib_examples.ipynb
@@ -11,6 +11,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ngraph.lib.graph import StrictMultiDiGraph\n",
+    "from ngraph.lib.algorithms.max_flow import calc_max_flow\n",
+    "\n",
+    "# Create a graph\n",
+    "g = StrictMultiDiGraph()\n",
+    "g.add_node(\"A\")\n",
+    "g.add_node(\"B\")\n",
+    "g.add_node(\"C\")\n",
+    "g.add_node(\"D\")\n",
+    "g.add_edge(\"A\", \"B\", metric=1, capacity=1)\n",
+    "g.add_edge(\"B\", \"C\", metric=1, capacity=1)\n",
+    "g.add_edge(\"A\", \"B\", metric=1, capacity=2)\n",
+    "g.add_edge(\"B\", \"C\", metric=1, capacity=2)\n",
+    "g.add_edge(\"A\", \"D\", metric=2, capacity=3)\n",
+    "g.add_edge(\"D\", \"C\", metric=2, capacity=3)\n",
+    "\n",
+    "# Calculate MaxFlow between the source and destination nodes\n",
+    "max_flow = calc_max_flow(g, \"A\", \"C\")\n",
+    "\n",
+    "print(max_flow)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
