Introducing the topology dsl.

--- a/notebooks/lib_examples.ipynb
+++ b/notebooks/lib_examples.ipynb
@@ -108,12 +108,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Demonstrates traffic engineering by placing two bidirectional demands on a network.\n",
+    "Demonstrates traffic engineering by placing two demands on a network.\n",
     "\n",
     "Graph topology (metrics/capacities):\n",
     "\n",
