CapacityProbe step prototype

--- a/notebooks/lib_examples.ipynb
+++ b/notebooks/lib_examples.ipynb
@@ -32,12 +32,12 @@
     "g.add_node(\"B\")\n",
     "g.add_node(\"C\")\n",
     "g.add_node(\"D\")\n",
-    "g.add_edge(\"A\", \"B\", metric=1, capacity=1)\n",
-    "g.add_edge(\"B\", \"C\", metric=1, capacity=1)\n",
-    "g.add_edge(\"A\", \"B\", metric=1, capacity=2)\n",
-    "g.add_edge(\"B\", \"C\", metric=1, capacity=2)\n",
-    "g.add_edge(\"A\", \"D\", metric=2, capacity=3)\n",
-    "g.add_edge(\"D\", \"C\", metric=2, capacity=3)\n",
+    "g.add_edge(\"A\", \"B\", cost=1, capacity=1)\n",
+    "g.add_edge(\"B\", \"C\", cost=1, capacity=1)\n",
+    "g.add_edge(\"A\", \"B\", cost=1, capacity=2)\n",
+    "g.add_edge(\"B\", \"C\", cost=1, capacity=2)\n",
+    "g.add_edge(\"A\", \"D\", cost=2, capacity=3)\n",
+    "g.add_edge(\"D\", \"C\", cost=2, capacity=3)\n",
     "\n",
     "# Calculate MaxFlow between the source and destination nodes\n",
     "max_flow = calc_max_flow(g, \"A\", \"C\")\n",
@@ -47,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "Tests max flow calculations on a graph with parallel edges.\n",
     "\n",
-    "Graph topology (metrics/capacities):\n",
+    "Graph topology (costs/capacities):\n",
     "\n",
     "            [1,1] & [1,2]     [1,1] & [1,2]\n",
     "    A ──────────────────► B ─────────────► C\n",
@@ -63,10 +63,10 @@
     "    └───────────────────► D ───────────────┘\n",
     "\n",
     "Edges:\n",
-    "- A→B: two parallel edges with (metric=1, capacity=1) and (metric=1, capacity=2)\n",
-    "- B→C: two parallel edges with (metric=1, capacity=1) and (metric=1, capacity=2)\n",
-    "- A→D: (metric=2, capacity=3)\n",
-    "- D→C: (metric=2, capacity=3)\n",
+    "- A→B: two parallel edges with (cost=1, capacity=1) and (cost=1, capacity=2)\n",
+    "- B→C: two parallel edges with (cost=1, capacity=1) and (cost=1, capacity=2)\n",
+    "- A→D: (cost=2, capacity=3)\n",
+    "- D→C: (cost=2, capacity=3)\n",
     "\n",
     "The test computes:\n",
     "- The true maximum flow (expected flow: 6.0)\n",
@@ -83,13 +83,13 @@
     "    g.add_node(node)\n",
     "\n",
     "# Create parallel edges between A→B and B→C\n",
-    "g.add_edge(\"A\", \"B\", key=0, metric=1, capacity=1)\n",
-    "g.add_edge(\"A\", \"B\", key=1, metric=1, capacity=2)\n",
-    "g.add_edge(\"B\", \"C\", key=2, metric=1, capacity=1)\n",
-    "g.add_edge(\"B\", \"C\", key=3, metric=1, capacity=2)\n",
+    "g.add_edge(\"A\", \"B\", key=0, cost=1, capacity=1)\n",
+    "g.add_edge(\"A\", \"B\", key=1, cost=1, capacity=2)\n",
+    "g.add_edge(\"B\", \"C\", key=2, cost=1, capacity=1)\n",
+    "g.add_edge(\"B\", \"C\", key=3, cost=1, capacity=2)\n",
     "# Create an alternative path A→D→C\n",
-    "g.add_edge(\"A\", \"D\", key=4, metric=2, capacity=3)\n",
-    "g.add_edge(\"D\", \"C\", key=5, metric=2, capacity=3)\n",
+    "g.add_edge(\"A\", \"D\", key=4, cost=2, capacity=3)\n",
+    "g.add_edge(\"D\", \"C\", key=5, cost=2, capacity=3)\n",
     "\n",
     "# 1. The true maximum flow\n",
     "max_flow_prop = calc_max_flow(g, \"A\", \"C\")\n",
@@ -115,7 +115,7 @@
     "\"\"\"\n",
     "Demonstrates traffic engineering by placing two demands on a network.\n",
     "\n",
-    "Graph topology (metrics/capacities):\n",
+    "Graph topology (costs/capacities):\n",
     "\n",
     "            [15]\n",
     "        A ─────── B\n",
@@ -142,12 +142,12 @@
     "    g.add_node(node)\n",
     "\n",
     "# Create bidirectional edges with distinct labels (for clarity).\n",
-    "g.add_edge(\"A\", \"B\", key=0, metric=1, capacity=15, label=\"1\")\n",
-    "g.add_edge(\"B\", \"A\", key=1, metric=1, capacity=15, label=\"1\")\n",
-    "g.add_edge(\"B\", \"C\", key=2, metric=1, capacity=15, label=\"2\")\n",
-    "g.add_edge(\"C\", \"B\", key=3, metric=1, capacity=15, label=\"2\")\n",
-    "g.add_edge(\"A\", \"C\", key=4, metric=1, capacity=5, label=\"3\")\n",
-    "g.add_edge(\"C\", \"A\", key=5, metric=1, capacity=5, label=\"3\")\n",
+    "g.add_edge(\"A\", \"B\", key=0, cost=1, capacity=15, label=\"1\")\n",
+    "g.add_edge(\"B\", \"A\", key=1, cost=1, capacity=15, label=\"1\")\n",
+    "g.add_edge(\"B\", \"C\", key=2, cost=1, capacity=15, label=\"2\")\n",
+    "g.add_edge(\"C\", \"B\", key=3, cost=1, capacity=15, label=\"2\")\n",
+    "g.add_edge(\"A\", \"C\", key=4, cost=1, capacity=5, label=\"3\")\n",
+    "g.add_edge(\"C\", \"A\", key=5, cost=1, capacity=5, label=\"3\")\n",
     "\n",
     "# Initialize flow-related structures (e.g., to track placed flows in the graph).\n",
     "flow_graph = init_flow_graph(g)\n",
