performance improvements for spf and max-flow

--- a/notebooks/lib_examples.ipynb
+++ b/notebooks/lib_examples.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,18 +153,18 @@
     "flow_graph = init_flow_graph(g)\n",
     "\n",
     "# Demand from A→C (volume 20).\n",
-    "demand_ac = Demand(\"A\", \"C\", 20)\n",
     "flow_policy_ac = get_flow_policy(FlowPolicyConfig.TE_UCMP_UNLIM)\n",
-    "demand_ac.place(flow_graph, flow_policy_ac)\n",
+    "demand_ac = Demand(\"A\", \"C\", 20, flow_policy=flow_policy_ac)\n",
+    "demand_ac.place(flow_graph)\n",
     "assert demand_ac.placed_demand == 20, (\n",
     "    f\"Demand from {demand_ac.src_node} to {demand_ac.dst_node} \"\n",
     "    f\"expected to be fully placed.\"\n",
     ")\n",
     "\n",
     "# Demand from C→A (volume 20), using a separate FlowPolicy instance.\n",
-    "demand_ca = Demand(\"C\", \"A\", 20)\n",
     "flow_policy_ca = get_flow_policy(FlowPolicyConfig.TE_UCMP_UNLIM)\n",
-    "demand_ca.place(flow_graph, flow_policy_ca)\n",
+    "demand_ca = Demand(\"C\", \"A\", 20, flow_policy=flow_policy_ca)\n",
+    "demand_ca.place(flow_graph)\n",
     "assert demand_ca.placed_demand == 20, (\n",
     "    f\"Demand from {demand_ca.src_node} to {demand_ca.dst_node} \"\n",
     "    f\"expected to be fully placed.\"\n",
