Refactor code style across multiple files to comply with ruff

--- a/notebooks/bb_fabric.ipynb
+++ b/notebooks/bb_fabric.ipynb
@@ -7,14 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ngraph.scenario import Scenario\n",
-    "from ngraph.traffic_demand import TrafficDemand\n",
-    "from ngraph.traffic_manager import TrafficManager\n",
-    "from ngraph.lib.flow_policy import FlowPolicyConfig, FlowPolicy, FlowPlacement\n",
-    "from ngraph.lib.algorithms.base import PathAlg, EdgeSelect\n",
-    "from ngraph.failure_manager import FailureManager\n",
-    "from ngraph.failure_policy import FailurePolicy, FailureRule, FailureCondition\n",
-    "from ngraph.explorer import NetworkExplorer"
+    "from ngraph.explorer import NetworkExplorer\n",
+    "from ngraph.scenario import Scenario"
    ]
   },
   {
