--- a/notebooks/small_demo.ipynb
+++ b/notebooks/small_demo.ipynb
@@ -6,13 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ngraph.failure_manager import FailureManager\n",
+    "from ngraph.failure_policy import FailurePolicy, FailureRule\n",
+    "from ngraph.lib.flow_policy import FlowPlacement, FlowPolicyConfig\n",
     "from ngraph.scenario import Scenario\n",
     "from ngraph.traffic_demand import TrafficDemand\n",
-    "from ngraph.traffic_manager import TrafficManager\n",
-    "from ngraph.lib.flow_policy import FlowPolicyConfig, FlowPolicy, FlowPlacement\n",
-    "from ngraph.lib.algorithms.base import PathAlg, EdgeSelect\n",
-    "from ngraph.failure_manager import FailureManager\n",
-    "from ngraph.failure_policy import FailurePolicy, FailureRule, FailureCondition"
+    "from ngraph.traffic_manager import TrafficManager"
    ]
   },
   {
@@ -187,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -210,10 +209,11 @@
     }
    ],
    "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from collections import defaultdict\n",
     "\n",
     "\n",
     "def plot_priority_cdf(results, complementary: bool = True):\n",
@@ -240,7 +240,7 @@
     "    # 1) Aggregate total placed volume for each iteration & priority\n",
     "    #    (similar logic as before, but we'll directly store iteration-level sums).\n",
     "    volume_per_iter_priority = defaultdict(float)\n",
-    "    for (src, dst, priority), data_list in by_src_dst.items():\n",
+    "    for (_src, _dst, priority), data_list in by_src_dst.items():\n",
     "        for entry in data_list:\n",
     "            it = entry[\"iteration\"]\n",
     "            volume_per_iter_priority[(it, priority)] += entry[\"placed_volume\"]\n",
