Refactor traffic demand handling to use TrafficMatrixSet

--- a/notebooks/small_demo.ipynb
+++ b/notebooks/small_demo.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ngraph.failure_manager import FailureManager\n",
     "from ngraph.failure_policy import FailurePolicy, FailureRule\n",
     "from ngraph.lib.flow_policy import FlowPlacement, FlowPolicyConfig\n",
+    "from ngraph.results_artifacts import TrafficMatrixSet\n",
     "from ngraph.scenario import Scenario\n",
     "from ngraph.traffic_demand import TrafficDemand\n",
     "from ngraph.traffic_manager import TrafficManager"
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -138,9 +139,15 @@
     "    flow_policy_config=FlowPolicyConfig.SHORTEST_PATHS_ECMP,\n",
     ")\n",
     "demands = [d]\n",
+    "\n",
+    "# Create traffic matrix set to organize traffic demands\n",
+    "traffic_matrix_set = TrafficMatrixSet()\n",
+    "traffic_matrix_set.add(\"main\", demands)\n",
+    "\n",
     "tm = TrafficManager(\n",
     "    network=network,\n",
-    "    traffic_demands=demands,\n",
+    "    traffic_matrix_set=traffic_matrix_set,\n",
+    "    matrix_name=\"main\",\n",
     ")\n",
     "tm.build_graph()\n",
     "tm.expand_demands()\n",
@@ -149,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -175,8 +182,8 @@
     "]\n",
     "fpolicy = FailurePolicy(rules=my_rules)\n",
     "\n",
-    "# Run Monte Carlo\n",
-    "fmgr = FailureManager(network, demands, failure_policy=fpolicy)\n",
+    "# Run Monte Carlo failure analysis\n",
+    "fmgr = FailureManager(network, traffic_matrix_set, failure_policy=fpolicy)\n",
     "results = fmgr.run_monte_carlo_failures(iterations=30, parallelism=10)\n",
     "overall = results[\"overall_stats\"]\n",
     "print(\"Overall Statistics:\")\n",
