Refactor failure policy handling: Introduce FailurePolicySet for managing multiple policies

--- a/notebooks/small_demo.ipynb
+++ b/notebooks/small_demo.ipynb
@@ -9,7 +9,7 @@
     "from ngraph.failure_manager import FailureManager\n",
     "from ngraph.failure_policy import FailurePolicy, FailureRule\n",
     "from ngraph.lib.flow_policy import FlowPlacement, FlowPolicyConfig\n",
-    "from ngraph.results_artifacts import TrafficMatrixSet\n",
+    "from ngraph.results_artifacts import FailurePolicySet, TrafficMatrixSet\n",
     "from ngraph.scenario import Scenario\n",
     "from ngraph.traffic_demand import TrafficDemand\n",
     "from ngraph.traffic_manager import TrafficManager"
@@ -182,8 +182,14 @@
     "]\n",
     "fpolicy = FailurePolicy(rules=my_rules)\n",
     "\n",
+    "# Create failure policy set\n",
+    "failure_policy_set = FailurePolicySet()\n",
+    "failure_policy_set.add(\"default\", fpolicy)\n",
+    "\n",
     "# Run Monte Carlo failure analysis\n",
-    "fmgr = FailureManager(network, traffic_matrix_set, failure_policy=fpolicy)\n",
+    "fmgr = FailureManager(\n",
+    "    network, traffic_matrix_set, failure_policy_set=failure_policy_set\n",
+    ")\n",
     "results = fmgr.run_monte_carlo_failures(iterations=30, parallelism=10)\n",
     "overall = results[\"overall_stats\"]\n",
     "print(\"Overall Statistics:\")\n",
